samples/_failures_safe/1761082640_5ab8f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec7c76e0.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_ec7c76e0.c:114:9: error: expected identifier at end of input
  114 |         if (mesh->vertices[i].y > mesh->
      |         ^~
./samples/SAFE/__tmp_ec7c76e0.c:114:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec7c76e0.c:114:9: error: expected declaration or statement at end of input
